# drf_resource

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  BKCOMPAT_MIGRATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  REFACTORING_PLAN.md  architecture_evaluation_report.md  pyproject.toml  test1.py  validate_core_implementation.py  validate_implementation.py
bkmonitor/: gunicorn_config.py  manage.py  monkey.py  pyproject.toml  settings.py  urls.py  wsgi.py
bkmonitor/alarm_backends/: apps.py  constants.py
bkmonitor/alarm_backends/cluster/: __init__.py  define.py
bkmonitor/alarm_backends/core/: cluster.py  i18n.py
bkmonitor/alarm_backends/integration_tests/: access_event_generator.py
bkmonitor/alarm_backends/management/: hashring.py  utils.py
bkmonitor/alarm_backends/service/: __init__.py
bkmonitor/alarm_backends/templatetags/: math_filters.py  port_range.py  unit.py
bkmonitor/alarm_backends/tests/: conftest.py
bkmonitor/api/: __init__.py  base.py
bkmonitor/api/aidev/: default.py
bkmonitor/api/aiops_sdk/: default.py
bkmonitor/api/apm_api/: default.py
bkmonitor/api/bcs/: default.py  tasks.py
bkmonitor/api/bcs_cc/: default.py
bkmonitor/api/bcs_cluster_manager/: default.py
bkmonitor/api/bcs_project/: default.py
bkmonitor/api/bcs_storage/: default.py
bkmonitor/api/bk_apigateway/: default.py
bkmonitor/api/bk_login/: default.py
bkmonitor/api/bk_paas/: default.py
bkmonitor/api/bk_plugin/: default.py
bkmonitor/api/bkchat/: default.py
bkmonitor/api/bkdata/: default.py
bkmonitor/api/bkssm/: default.py
bkmonitor/api/bmw/: default.py
bkmonitor/api/bscp/: default.py
bkmonitor/api/cmdb/: client.py  default.py  define.py  ipchooser.py  mock.py
bkmonitor/api/cmsi/: default.py
bkmonitor/api/common/: default.py
bkmonitor/api/devops/: default.py
bkmonitor/api/docs/: default.py
bkmonitor/api/grafana/: default.py  exporter.py
bkmonitor/api/gse/: default.py
bkmonitor/api/iam/: default.py
bkmonitor/api/itsm/: default.py
bkmonitor/api/job/: default.py
bkmonitor/api/kubernetes/: default.py
bkmonitor/api/log_search/: default.py
bkmonitor/api/metadata/: default.py
bkmonitor/api/monitor/: default.py
bkmonitor/api/node_man/: default.py
bkmonitor/api/sops/: default.py
bkmonitor/api/unify_query/: default.py
bkmonitor/apm/: admin.py  apps.py  constants.py  resources.py  types.py  urls.py  views.py
bkmonitor/apm/core/: application_config.py  bk_collector_config.py  cluster_config.py  platform_config.py
bkmonitor/apm/migrations/: 0001_initial.py  0002_initbuilt_config.py  0003_subscriptionconfig.py  0004_apdexconfig_samplerconfig.py  0005_auto_20220524_2018.py  0006_auto_20220614_1735.py  0007_auto_20220627_2145.py  0008_auto_20220629_1817.py  0009_auto_20220701_1532.py  0010_auto_20220708_1537.py  0011_delete_traceapprelation.py  0012_auto_20220721_2126.py  0013_auto_20220902_1829.py  0014_initbuilt_metric_dimensions.py  0014_metricdatasource_bk_data_virtual_metric_config.py  0015_merge_20221008_1621.py  0016_qpsconfig.py  0017_auto_20221024_1640.py  0018_tupdate_metric_dimensions.py  0019_datalink_influxdb_cluster_name.py  0020_auto_20230309_1547.py  0021_datalink_pre_calculate_config.py  0022_ebpfapplicationconfig.py  0023_licenseconfig.py
bkmonitor/apm/models/: __init__.py  application.py  config.py  datasource.py  doris.py  profile.py  subscription_config.py  topo.py
bkmonitor/apm/task/: __init__.py  tasks.py
bkmonitor/apm/tests/: conftest.py  test_query_topo_instance.py  test_release_app_config.py  test_topoinstance.py
bkmonitor/apm/utils/: __init__.py  base.py  es_search.py  report_event.py  time.py
bkmonitor/apm_ebpf/: admin.py  apps.py  constants.py  resource.py
bkmonitor/apm_ebpf/handlers/: deepflow.py  provisioning.py  relation.py  workload.py
bkmonitor/apm_ebpf/models/: __init__.py  workload.py
bkmonitor/apm_ebpf/task/: tasks.py
bkmonitor/bk_dataview/: api.py  apps.py  authentication.py  client.py  models.py  permissions.py  provisioning.py  router.py  settings.py  urls.py  utils.py  views.py
bkmonitor/bkm_ipchooser/: api.py  apps.py  authentication.py  constants.py  exceptions.py  mock_data.py  models.py  types.py  urls.py  views.py
bkmonitor/bkm_ipchooser/handlers/: base.py  config_handler.py  dynamic_group_handler.py  host_handler.py  template_handler.py  topo_handler.py
bkmonitor/bkm_ipchooser/query/: resource.py
bkmonitor/bkm_ipchooser/serializers/: base.py  config_sers.py  (+4 more)
bkmonitor/bkm_space/: api.py  apps.py  define.py  errors.py  middleware.py  serializers.py  utils.py  validate.py
bkmonitor/bkmonitor/: admin.py  apps.py  db_routers.py  migrate.py  profiling.py
bkmonitor/calendars/: admin.py  apps.py  constants.py  models.py  serializers.py  urls.py  views.py
bkmonitor/config/: __init__.py  default.py  dev.py  prod.py  stag.py
bkmonitor/constants/: action.py  aiops.py  alert.py  apm.py  cmdb.py  common.py  data_source.py  dataflow.py  event.py  incident.py  new_report.py  report.py  result_table.py  shield.py  strategy.py  view.py
bkmonitor/core/: cache.py  testing.py  utils.py
bkmonitor/drf_resource/: admin.py  apps.py  base.py  cache.py
bkmonitor/kernel_api/: __init__.py  adapters.py  apps.py  dbroutors.py  exceptions.py  nested_api.py  urls.py
bkmonitor/metadata/: admin.py  apps.py  config.py  migration_util.py  signals.py  views.py
bkmonitor/patches/: bkoauth.py  furl.py  json.py  re.py  shutil.py
bkmonitor/query_api/: apps.py  exceptions.py  resources.py
bkmonitor/scripts/: add_py_license_header.py  convert_yaml.py
bkmonitor/tests/: conftest.py  test_tools.py
drf-resource-template/: .gitignore  cookiecutter.json  pyproject.toml
drf-resource-template/hooks/: post_gen_project.py  pre_gen_project.py
drf-resource-template/tests/: conftest.py  test_s01_engine.py  test_s02_config.py  test_s03_integration.py  test_s04_switches.py
drf-resource-template/{{cookiecutter.project_name}}/: .commitlintrc.json  .env.example  .gitignore  .pre-commit-config.yaml  README.md  local_settings.example.py  manage.py  pyproject.toml  requirements.txt
(+1839 files in other folders)
