[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61", "wheel"]

[project]
name = "{{ cookiecutter.project_name }}"
version = "0.1.0"
description = "{{ cookiecutter.project_description }}"
readme = "README.md"
requires-python = ">={{ cookiecutter.python_version }}"
{% if cookiecutter.author_name %}
authors = [{ name = "{{ cookiecutter.author_name }}" }]
{% endif %}
license = { text = "MIT" }
keywords = ["django", "drf", "rest-framework", "drf-resource"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "Django>=4.2",
    "djangorestframework>=3.14",
    "drf-resource>=0.1.0",
    "whitenoise>=6.0",
    "python-dotenv>=1.0",
    {% if cookiecutter.database_backend == "mysql" %}"pymysql>=1.0",
    {% elif cookiecutter.database_backend == "postgresql" %}"psycopg2-binary>=2.9",
    {% endif %}
    {% if cookiecutter.enable_celery == "yes" %}"celery>=5.0",
    "django-celery-beat>=2.5",
    "django-celery-results>=2.5",
    {% endif %}
    {% if cookiecutter.enable_redis_cache == "yes" %}"django-redis>=5.0",
    "redis>=4.0",
    {% endif %}
    {% if cookiecutter.enable_cors == "yes" %}"django-cors-headers>=4.0",
    {% endif %}
    {% if cookiecutter.enable_api_docs == "yes" %}"drf-spectacular>=0.27",
    {% endif %}
]

[dependency-groups]
dev = [
    "pre-commit>=4.0",
    "ruff>=0.11",
    "pytest>=8",
    "pytest-cov>=4",
    "pytest-django>=4.5",
    "pytest-mock>=3",
    "pytest-env>=1.0",
]

# ── ruff ──────────────────────────────────────
[tool.ruff]
line-length = 120
target-version = "py{{ cookiecutter.python_version | replace('.', '') }}"
exclude = [
    ".git",
    "venv",
    ".venv",
    "__pypackages__",
    ".ruff_cache",
    "migrations",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "UP"]
extend-ignore = ["E402"]
fixable = ["ALL"]
extend-safe-fixes = ["UP"]

[tool.ruff.lint.extend-per-file-ignores]
"config/**" = ["F405", "F403"]  # config 模块使用 import * 模式

[tool.ruff.format]
docstring-code-format = true

# ── pytest ────────────────────────────────────
[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "{{ cookiecutter.project_name }}.settings"
python_files = ["test_*.py", "tests.py"]
testpaths = ["tests"]
console_output_style = "count"
log_level = "ERROR"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::ResourceWarning",
]
env = [
    "DJANGO_ENV=testing",
]

# ── coverage ──────────────────────────────────
[tool.coverage.run]
omit = [
    "*/test*",
    "*/migrations*",
    "*/__init__.py",
    "manage.py",
    "*/settings.py",
    "*/config/**",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
skip_empty = true
show_missing = true
